# pete-hid-dump

./: CMakeLists.txt
IOHIDReportTest/: main.c
pete-hid-dump/: main.c
pete-hid-dump.xcodeproj/: project.pbxproj
pete-hid-dump.xcodeproj/xcshareddata/xcschemes/: IOHIDReportTest.xcscheme
